# ai-builder

./: .gitignore  AGENTS.md  README.md  pyproject.toml
ai-builder/: README.md  pyproject.toml
ai-builder/src/ai_builder/: __init__.py  __main__.py  cli.py
ai-builder/src/ai_builder/commands/: add.py  create.py  visualize.py
ai-builder/src/ai_builder/core/: agent.py  communication.py  config.py
ai-builder/src/ai_builder/deploy/: __init__.py  generators.py
ai-builder/src/ai_builder/templates/: __init__.py  agent_deep.py  agent_langchain.py  pipeline.py  rag.py  tool.py
ai-builder/src/ai_builder/tools/: __init__.py  embedder.py  llm.py  loader.py  retriever.py  splitter.py  vector_store.py  web_search.py
ai-builder/src/ai_builder/tools/document_loader/: __init__.py
ai-builder/src/ai_builder/tools/document_loader/common/: schemas.py
ai-builder/src/ai_builder/tools/document_loader/loader_json/: main.py
ai-builder/src/ai_builder/tools/document_loader/loader_pdf/: main.py
ai-builder/src/ai_builder/tools/document_loader/loader_text/: __init__.py  main.py
ai-builder/src/ai_builder/tools/document_loader/loader_word/: __init__.py  main.py
ai-builder/src/ai_builder/tools/document_loader/loader_xml/: main.py
ai-builder/src/ai_builder/tools/embedder/: config.py  main.py
ai-builder/src/ai_builder/tools/llm/: __init__.py  config.py  main.py  tool.py  types.py
ai-builder/src/ai_builder/tools/llm/connectors/: __init__.py  ollama.py  self_hosted.py
ai-builder/src/ai_builder/tools/loader/: __init__.py  config.py  main.py
ai-builder/src/ai_builder/tools/retriever/: config.py  main.py
ai-builder/src/ai_builder/tools/splitter/: __init__.py  config.py
ai-builder/src/ai_builder/tools/vector_store/: __init__.py  config.py  main.py
ai-builder/src/ai_builder/tools/web_search/: config.py  main.py
ai-builder/src/ai_builder/tracing/: __init__.py  tracer.py
docs/: README.md  architecture.md  built-in-tools.md  cli-reference.md  configuration-and-environment.md  contributing.md  core-concepts.md  deployment.md  getting-started.md  installation-and-upgrade.md  observability.md  templates.md
src/: __init__.py  cli.py
src/commands/: add.py  create.py  rag_wizard.py  run.py  serve.py
src/core/: __init__.py  pipeline.py  tool.py
src/deploy/: __init__.py  generators.py
src/templates/: __init__.py  agent_deep.py  agent_langchain.py  pipeline.py  rag.py  rag_scaffold.py  tool.py
src/tools/: __init__.py
src/tools/data_source/: __init__.py  azure_blob.py  gcs.py  google_drive.py  local_fs.py  onedrive.py  s3_compatible.py
src/tools/document_loader/: umbrella.py
src/tools/document_loader/common/: __init__.py  base.py  extract.py  runner.py
src/tools/document_loader/loader_epub/: __init__.py  main.py
src/tools/document_loader/loader_html/: __init__.py  main.py
src/tools/document_loader/loader_json/: __init__.py
src/tools/document_loader/loader_pdf/: __init__.py
src/tools/document_loader/loader_rtf/: __init__.py  main.py
src/tools/document_loader/loader_slides/: __init__.py  main.py
src/tools/document_loader/loader_spreadsheet/: __init__.py  main.py
src/tools/document_loader/loader_xml/: __init__.py
src/tools/embedder/: __init__.py
src/tools/embeddings/: __init__.py  bge_base_en_v15.py  bge_large_en_v15.py  bge_m3.py  bge_small_en_v15.py  config.py  gte_base.py  gte_small.py  main.py  minilm_l6_v2.py  mpnet_base_v2.py  registry.py
src/tools/llm/: __init__.py  config.py  main.py
src/tools/llm/connectors/: anthropic.py  azure.py  bedrock.py  openai.py
src/tools/retriever/: __init__.py  config.py
src/tools/splitter/: main.py
src/tools/vector_store/: chroma_tool.py  config.py  faiss_tool.py  qdrant_tool.py
src/tools/web_search/: __init__.py
src/visualize/: html_template.py  mermaid.py
