[project]
name = "ai-builder"
version = "1.1.0"
description = "Lightweight CLI framework for building composable AI tools, agents, and pipelines"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "AGPL-3.0-or-later"}
keywords = ["ai", "agents", "rag", "pipeline", "llm", "langchain", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Document loaders — install only what you need per file type
docs-pdf = ["pdfplumber>=0.11"]
docs-word = ["python-docx>=1.1", "docx2txt>=0.8"]
docs-slides = ["python-pptx>=1.0"]
docs-html = ["beautifulsoup4>=4.12"]
docs-rtf = ["striprtf>=0.0.26"]
docs-spreadsheet = ["openpyxl>=3.1", "xlrd>=2.0"]
docs-epub = ["ebooklib>=0.18", "beautifulsoup4>=4.12"]
docs-odt = ["odfpy>=1.4"]
data-s3 = ["boto3>=1.34"]
data-minio = ["boto3>=1.34"]
data-ceph-s3 = ["boto3>=1.34"]
data-azure-blob = ["azure-storage-blob>=12.19", "azure-identity>=1.14"]
data-gcs = ["google-cloud-storage>=2.14"]
data-gdrive = ["google-api-python-client>=2.100", "google-auth-oauthlib>=1.2"]
data-onedrive = ["msal>=1.26", "requests>=2.31"]
vector-opensearch = ["opensearch-py>=2.4"]
vector-milvus = ["pymilvus>=2.4"]
vector-mongodb = ["pymongo>=4.6"]
vector-postgres = ["psycopg[binary]>=3.1", "pgvector>=0.2"]
vector-weaviate = ["weaviate-client>=4.4"]
vector-vald = ["grpcio>=1.60", "protobuf>=4.21"]
vector-redis = ["redis>=5.0"]
vector-lancedb = ["lancedb>=0.6"]
# Built-in tools: all document formats (union of the above)
docs = [
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "beautifulsoup4>=4.12",
    "striprtf>=0.0.26",
    "openpyxl>=3.1",
    "docx2txt>=0.8",
    "xlrd>=2.0",
    "ebooklib>=0.18",
    "odfpy>=1.4",
]
embeddings-local = ["sentence-transformers>=3.3"]
embeddings-openai = ["openai>=1.0"]
embeddings = ["sentence-transformers>=3.3"]
rag = [
    "sentence-transformers>=3.3",
    "faiss-cpu>=1.9",
    "langchain-text-splitters>=0.3",
]
llm-openai = ["openai>=1.0"]
llm-anthropic = ["anthropic>=0.40"]
llm-bedrock = ["anthropic>=0.40"]
llm = ["openai>=1.0", "anthropic>=0.40"]
# Agent frameworks
agents = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-community>=0.3",
    "langgraph>=0.2",
]
# Tracing / observability
tracing = ["langfuse>=2.0"]
# Web dashboard
serve = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
# Vector DB alternatives
faiss = ["faiss-cpu>=1.9"]
chroma = ["chromadb>=0.5"]
qdrant = ["qdrant-client>=1.12"]
# Web search
search = ["tavily-python>=0.5"]
# Everything
all = [
    "ai-builder[docs,rag,llm,agents,tracing,serve,chroma,qdrant,search]",
]
dev = ["pytest>=8.0", "ruff>=0.8"]

[project.urls]
Homepage = "https://github.com/rohaanuv/ai-builder"
Repository = "https://github.com/rohaanuv/ai-builder"
Issues = "https://github.com/rohaanuv/ai-builder/issues"

[project.scripts]
ai-builder = "ai_builder.cli:app"

[tool.setuptools]
# Flat layout: package files live directly under src/; import name remains ai_builder.
package-dir = {"ai_builder" = "src"}
packages = [
    "ai_builder",
    "ai_builder.commands",
    "ai_builder.core",
    "ai_builder.deploy",
    "ai_builder.templates",
    "ai_builder.tools",
    "ai_builder.tools.document_loader",
    "ai_builder.tools.document_loader.common",
    "ai_builder.tools.document_loader.loader_epub",
    "ai_builder.tools.document_loader.loader_html",
    "ai_builder.tools.document_loader.loader_json",
    "ai_builder.tools.document_loader.loader_pdf",
    "ai_builder.tools.document_loader.loader_rtf",
    "ai_builder.tools.document_loader.loader_slides",
    "ai_builder.tools.document_loader.loader_spreadsheet",
    "ai_builder.tools.document_loader.loader_text",
    "ai_builder.tools.document_loader.loader_word",
    "ai_builder.tools.document_loader.loader_xml",
    "ai_builder.tools.data_source",
    "ai_builder.tools.embeddings",
    "ai_builder.tools.llm",
    "ai_builder.tools.llm.connectors",
    "ai_builder.tools.retriever",
    "ai_builder.tools.splitter",
    "ai_builder.tools.vector_store",
    "ai_builder.tools.web_search",
    "ai_builder.tracing",
    "ai_builder.visualize",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py313"
[tool.ruff.lint]
select = ["E", "F", "W", "I"]
